apps/kubevirt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt
---
apiVersion: v1
kind: Namespace
metadata:
  name: cdi
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-vms
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-manager
